[project]
name = "quill"
version = "0.1.0"
description = "A command-line transcription tool using faster-whisper"
readme = "Readme.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["transcription", "whisper", "speech-to-text", "youtube"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.1",
    "click>=8.1",
    "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cudnn-cu12>=9.17.1.4",
]

[project.scripts]
quill = "app.cli.commands:transcribe"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
